<resources>
    <string name="app_name">Huellas</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="key">Key</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
