<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

</androidx.constraintlayout.widget.ConstraintLayout>