<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:onClick="attemptLogin"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_bar_style" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>